Add upgraded Java/WebLogic upgrade playbooks for all environments

--- a/yml/uat/weblogic/upgrade_Java_weblogic.yml
+++ b/yml/uat/weblogic/upgrade_Java_weblogic.yml
@@ -1,6 +1,6 @@
 ---
-- name: Backup, Replace WebLogic Files, Uninstall & Install Java on Windows Server
-  hosts: prod_weblogic_win
+- name: Backup, Replace WebLogic Files, Uninstall & Install Java on Windows Server - UAT Environment
+  hosts: uat_weblogic_win
   gather_facts: no
   
   vars:
