--- a/yml/dev/weblogic/upgrade_Java_weblogic.yml
+++ b/yml/dev/weblogic/upgrade_Java_weblogic.yml
@@ -1,6 +1,6 @@
 ---
-- name: Backup, Replace WebLogic Files, Uninstall & Install Java on Windows Server
-  hosts: prod_weblogic_win
+- name: Backup, Replace WebLogic Files, Uninstall & Install Java on Windows Server - DEV Environment
+  hosts: dev_weblogic_win
   gather_facts: no
   
   vars:
