--- a/yml/test/weblogic/upgrade_Java_weblogic.yml
+++ b/yml/test/weblogic/upgrade_Java_weblogic.yml
@@ -1,6 +1,6 @@
 ---
-- name: Backup, Replace WebLogic Files, Uninstall & Install Java on Windows Server
-  hosts: prod_weblogic_win
+- name: Backup, Replace WebLogic Files, Uninstall & Install Java on Windows Server - TEST Environment
+  hosts: test_weblogic_win
   gather_facts: no
   
   vars:
