--- a/yml/prod/weblogic/upgrade_Java_weblogic.yml
+++ b/yml/prod/weblogic/upgrade_Java_weblogic.yml
@@ -12,8 +12,9 @@
     oracle_home: "E:\\Oracle\\Middleware\\Oracle_Home"
     backup_dir: "E:\\Oracle\\backup"
     java_source_dir: "E:\\Java_source"
-    java_install_dir: "E:\\jdk1.8.0_441"
     java_installer: "jdk-8u441-windows-x64.exe"
+    java_install_dir: "E:\\jdk1.8.0_441"
+    
     
     # WebLogic domain configuration
     weblogic_domain: "base_domain"
@@ -24,6 +25,47 @@
     # Jenkins Pipeline Variables
     jenkins_build_number: "{{ jenkins_build_number | default('manual') }}"
     jenkins_job_name: "{{ jenkins_job_name | default('ansible-weblogic-upgrade') }}"
+    
+    # WebLogic Configuration Update Variables
+    # These can be overridden via command line or Jenkins parameters
+    weblogic_config_updates:
+      - file: "{{ oracle_home }}\\oui\\.globalEnv.properties"
+        regexp: "{{ java_home_regexp | default('^#.*Java.*Home.*') }}"
+        line: "JAVA_HOME={{ java_install_dir }}\\bin\\java.exe"
+        description: "Java Home Configuration"
+        
+      - file: "{{ oracle_home }}\\oui\\.globalEnv.properties"
+        regexp: "{{ weblogic_home_regexp | default('^#.*WebLogic.*Home.*') }}"
+        line: "WL_HOME={{ oracle_home }}\\wlserver"
+        description: "WebLogic Home Configuration"
+        
+      - file: "{{ oracle_home }}\\user_projects\\domains\\{{ weblogic_domain }}\\nodemanager\\nodemanager.properties"
+        regexp: "{{ nodemanager_java_home_regexp | default('^JavaHome=.*') }}"
+        line: "JavaHome={{ java_install_dir }}"
+        description: "Node Manager Java Home"
+        
+      - file: "{{ oracle_home }}\\user_projects\\domains\\{{ weblogic_domain }}\\bin\\setNMJavaHome.cmd"
+        regexp: "{{ setnmjavahome_regexp | default('^set.*JAVA_HOME.*') }}"
+        line: "set JAVA_HOME={{ java_install_dir }}"
+        description: "Set NM Java Home Script"
+        
+      - file: "{{ oracle_home }}\\user_projects\\domains\\{{ weblogic_domain }}\\bin\\setDomainEnv.cmd"
+        regexp: "{{ setdomainenv_java_home_regexp | default('^set.*JAVA_HOME.*') }}"
+        line: "set JAVA_HOME={{ java_install_dir }}"
+        description: "Domain Environment Java Home"
+        
+      - file: "{{ oracle_home }}\\user_projects\\domains\\{{ weblogic_domain }}\\bin\\setDomainEnv.cmd"
+        regexp: "{{ setdomainenv_path_regexp | default('^set.*PATH.*') }}"
+        line: "set PATH=%JAVA_HOME%\\bin;%PATH%"
+        description: "Domain Environment PATH"
+    
+    # Customizable regexp patterns (can be overridden)
+    java_home_regexp: "{{ java_home_regexp | default('^#.*Java.*Home.*') }}"
+    weblogic_home_regexp: "{{ weblogic_home_regexp | default('^#.*WebLogic.*Home.*') }}"
+    nodemanager_java_home_regexp: "{{ nodemanager_java_home_regexp | default('^JavaHome=.*') }}"
+    setnmjavahome_regexp: "{{ setnmjavahome_regexp | default('^set.*JAVA_HOME.*') }}"
+    setdomainenv_java_home_regexp: "{{ setdomainenv_java_home_regexp | default('^set.*JAVA_HOME.*') }}"
+    setdomainenv_path_regexp: "{{ setdomainenv_path_regexp | default('^set.*PATH.*') }}"
     
   pre_tasks:
     - name: Log Jenkins Pipeline Start
@@ -36,23 +78,6 @@
           Environment: PROD
           Timestamp: {{ ansible_date_time.iso8601 }}
           
-    - name: Validate required files exist on Ansible server
-      stat:
-        path: "{{ ansible_source_dir }}/{{ item }}"
-      loop:
-        - ".globalEnv.properties"
-        - "nodemanager.properties"
-        - "setNMJavaHome.cmd"
-        - "setDomainEnv.cmd"
-        - "{{ java_installer }}"
-      register: source_file_check
-      
-    - name: Fail if required source files are missing
-      fail:
-        msg: "Required source file {{ item.item }} is missing from {{ ansible_source_dir }}"
-      when: not item.stat.exists
-      loop: "{{ source_file_check.results }}"
-      
   tasks:
     ### Ensure Backup Directory Exists
     - name: Create Backup Directory
@@ -113,59 +138,70 @@
         msg: "File {{ item.item.dest }} exists: {{ item.stat.exists }}"
       loop: "{{ file_check_results.results }}"
 
-    - name: Copy New WebLogic Files from Ansible Server (with content replacement)
-      win_copy:
-        src: "{{ ansible_source_dir }}/{{ item.src }}"
-        dest: "{{ item.dest }}"
-        remote_src: no
-        force: yes
-      loop:
-        - { src: ".globalEnv.properties", dest: "{{ oracle_home }}\\oui\\.globalEnv.properties" }
-        - { src: "nodemanager.properties", dest: "{{ oracle_home }}\\user_projects\\domains\\{{ weblogic_domain }}\\nodemanager\\nodemanager.properties" }
-        - { src: "setNMJavaHome.cmd", dest: "{{ oracle_home }}\\user_projects\\domains\\{{ weblogic_domain }}\\bin\\setNMJavaHome.cmd" }
-        - { src: "setDomainEnv.cmd", dest: "{{ oracle_home }}\\user_projects\\domains\\{{ weblogic_domain }}\\bin\\setDomainEnv.cmd" }
-      when: item.stat.exists
-      register: copy_results
-      loop: "{{ file_check_results.results }}"
+    - name: Display WebLogic Configuration Updates to be Applied
+      debug:
+        msg: |
+          === WebLogic Configuration Updates ===
+          File: {{ item.file }}
+          Pattern: {{ item.regexp }}
+          New Value: {{ item.line }}
+          Description: {{ item.description }}
+      loop: "{{ weblogic_config_updates }}"
 
-    - name: Copy New WebLogic Files for non-existing files
-      win_copy:
-        src: "{{ ansible_source_dir }}/{{ item.src }}"
+    - name: Update WebLogic Configuration Files (Direct Modification)
+      win_lineinfile:
+        path: "{{ item.file }}"
+        regexp: "{{ item.regexp }}"
+        line: "{{ item.line }}"
+        backrefs: yes
+      loop: "{{ weblogic_config_updates }}"
+      when: 
+        - item.file is defined
+        - item.regexp is defined
+        - item.line is defined
+      register: file_update_results
+
+    - name: Create WebLogic Configuration Files if they don't exist
+      win_template:
+        src: "{{ item.template_src }}"
         dest: "{{ item.dest }}"
-        remote_src: no
       loop:
-        - { src: ".globalEnv.properties", dest: "{{ oracle_home }}\\oui\\.globalEnv.properties" }
-        - { src: "nodemanager.properties", dest: "{{ oracle_home }}\\user_projects\\domains\\{{ weblogic_domain }}\\nodemanager\\nodemanager.properties" }
-        - { src: "setNMJavaHome.cmd", dest: "{{ oracle_home }}\\user_projects\\domains\\{{ weblogic_domain }}\\bin\\setNMJavaHome.cmd" }
-        - { src: "setDomainEnv.cmd", dest: "{{ oracle_home }}\\user_projects\\domains\\{{ weblogic_domain }}\\bin\\setDomainEnv.cmd" }
+        - { dest: "{{ oracle_home }}\\oui\\.globalEnv.properties", template_src: "templates/weblogic/globalEnv.properties.j2" }
+        - { dest: "{{ oracle_home }}\\user_projects\\domains\\{{ weblogic_domain }}\\nodemanager\\nodemanager.properties", template_src: "templates/weblogic/nodemanager.properties.j2" }
+        - { dest: "{{ oracle_home }}\\user_projects\\domains\\{{ weblogic_domain }}\\bin\\setNMJavaHome.cmd", template_src: "templates/weblogic/setNMJavaHome.cmd.j2" }
+        - { dest: "{{ oracle_home }}\\user_projects\\domains\\{{ weblogic_domain }}\\bin\\setDomainEnv.cmd", template_src: "templates/weblogic/setDomainEnv.cmd.j2" }
       when: not item.stat.exists
-      register: copy_new_results
-      loop: "{{ file_check_results.results }}"
+      register: file_create_results
 
-    - name: Verify file content after replacement
+    - name: Verify file content after update
       win_shell: |
-        $filePath = "{{ item.dest }}"
+        $filePath = "{{ item.item.dest }}"
         if (Test-Path $filePath) {
           $content = Get-Content $filePath -Raw
           $lineCount = ($content -split "`n").Count
-          Write-Output "File: $filePath - Lines: $lineCount - Size: $((Get-Item $filePath).Length) bytes"
+          $size = (Get-Item $filePath).Length
+          Write-Output "File: $filePath - Lines: $lineCount - Size: $size bytes"
+          
+          # Check for key configuration values
+          if ($content -match "JAVA_HOME") {
+            Write-Output "✓ JAVA_HOME configuration found"
+          }
+          if ($content -match "{{ java_install_dir }}") {
+            Write-Output "✓ Java path configuration updated"
+          }
         } else {
           Write-Output "File: $filePath - NOT FOUND"
         }
-      loop:
-        - { src: ".globalEnv.properties", dest: "{{ oracle_home }}\\oui\\.globalEnv.properties" }
-        - { src: "nodemanager.properties", dest: "{{ oracle_home }}\\user_projects\\domains\\{{ weblogic_domain }}\\nodemanager\\nodemanager.properties" }
-        - { src: "setNMJavaHome.cmd", dest: "{{ oracle_home }}\\user_projects\\domains\\{{ weblogic_domain }}\\bin\\setNMJavaHome.cmd" }
-        - { src: "setDomainEnv.cmd", dest: "{{ oracle_home }}\\user_projects\\domains\\{{ weblogic_domain }}\\bin\\setDomainEnv.cmd" }
+      loop: "{{ file_check_results.results }}"
       register: file_verification_results
 
-    - name: Display Copy Results Summary
+    - name: Display File Update Summary
       debug:
         msg: |
           === WebLogic Files Update Summary ===
           Files Checked: {{ file_check_results.results | length }}
-          Files Replaced: {{ copy_results.results | default([]) | length }}
-          Files Created: {{ copy_new_results.results | default([]) | length }}
+          Files Updated: {{ file_update_results.results | default([]) | length }}
+          Files Created: {{ file_create_results.results | default([]) | length }}
           Verification: {{ file_verification_results.results | map(attribute='stdout_lines') | list }}
 
     ### Uninstall Existing Java (Safe, Tolerant)
@@ -282,8 +318,8 @@
           environment: "PROD"
           jenkins_build: "{{ jenkins_build_number }}"
           backup_files: "{{ backup_results.results | length }}"
-          files_replaced: "{{ copy_results.results | default([]) | length }}"
-          files_created: "{{ copy_new_results.results | default([]) | length }}"
+          files_updated: "{{ file_update_results.results | default([]) | length }}"
+          files_created: "{{ file_create_results.results | default([]) | length }}"
           java_uninstalled: "{{ uninstall_java_result.stdout_lines | length }}"
           java_installed: "{{ java_install_dir }}"
           weblogic_version: "{{ weblogic_version_output.stdout_lines | first | default('N/A') }}"
@@ -298,7 +334,7 @@
           Environment: {{ execution_summary.environment }}
           Jenkins Build: {{ execution_summary.jenkins_build }}
           Backup Files: {{ execution_summary.backup_files }}
-          Files Replaced: {{ execution_summary.files_replaced }}
+          Files Updated: {{ execution_summary.files_updated }}
           Files Created: {{ execution_summary.files_created }}
           Java Uninstalled: {{ execution_summary.java_uninstalled }}
           Java Installation Path: {{ execution_summary.java_installed }}
