--- a/yml/prod/weblogic/Apply_Patch_weblogic.yml
+++ b/yml/prod/weblogic/Apply_Patch_weblogic.yml
@@ -1,18 +1,75 @@
 ---
 - name: Apply WebLogic Patch using OPatch on Windows
-  hosts: dev_weblogic_win
+  hosts: prod_weblogic_win
   gather_facts: no
+  
   vars:
-    oracle_home: "E:\\Oracle\\Middleware\\Oracle_Home"
-    patch_number: "35247514"
-    patch_file: "p35247514_122130_Generic.zip"
-    patch_local_path: "/home/appadmin/patches/{{ patch_file }}"
-    patch_remote_path: "E:\\Oracle\\patches\\{{ patch_file }}"
-    patch_extract_path: "E:\\Oracle\\Middleware\\patches\\{{ patch_number }}"
-    opatch_bin_path: "E:\\Oracle\\Middleware\\Oracle_Home\\OPatch"
+    # REQUIRED: WebLogic patch variables - MUST be provided by executor via command line
+    # Example: ansible-playbook -i inventory Apply_Patch_weblogic.yml \
+    #   -e "patch_number='35247514'" \
+    #   -e "patch_file='p35247514_122130_Generic.zip'" \
+    #   -e "oracle_home='E:\\Oracle\\Middleware\\Oracle_Home'" \
+    #   -e "patch_local_path='/home/appadmin/patches/p35247514_122130_Generic.zip'" \
+    #   -e "patch_remote_path='E:\\Oracle\\patches\\p35247514_122130_Generic.zip'" \
+    #   -e "patch_extract_path='E:\\Oracle\\Middleware\\patches\\35247514'"
+    
+    # Patch identification
+    patch_number: "{{ patch_number }}"
+    patch_file: "{{ patch_file }}"
+    
+    # Oracle and WebLogic paths
+    oracle_home: "{{ oracle_home }}"
+    
+    # Patch file paths
+    patch_local_path: "{{ patch_local_path }}"
+    patch_remote_path: "{{ patch_remote_path }}"
+    patch_extract_path: "{{ patch_extract_path }}"
+    
+    # OPatch binary path
+    opatch_bin_path: "{{ oracle_home }}\\OPatch"
+
+  pre_tasks:
+    - name: Validate Required Variables
+      fail:
+        msg: |
+          Required variables must be provided via command line:
+          
+          Example:
+          ansible-playbook -i inventory Apply_Patch_weblogic.yml \
+            -e "patch_number='35247514'" \
+            -e "patch_file='p35247514_122130_Generic.zip'" \
+            -e "oracle_home='E:\\Oracle\\Middleware\\Oracle_Home'" \
+            -e "patch_local_path='/home/appadmin/patches/p35247514_122130_Generic.zip'" \
+            -e "patch_remote_path='E:\\Oracle\\patches\\p35247514_122130_Generic.zip'" \
+            -e "patch_extract_path='E:\\Oracle\\Middleware\\patches\\35247514'"
+          
+          Variables provided:
+          - patch_number: {{ patch_number | default('NOT PROVIDED') }}
+          - patch_file: {{ patch_file | default('NOT PROVIDED') }}
+          - oracle_home: {{ oracle_home | default('NOT PROVIDED') }}
+          - patch_local_path: {{ patch_local_path | default('NOT PROVIDED') }}
+          - patch_remote_path: {{ patch_remote_path | default('NOT PROVIDED') }}
+          - patch_extract_path: {{ patch_extract_path | default('NOT PROVIDED') }}
+      when: 
+        - patch_number is not defined
+        - patch_file is not defined
+        - oracle_home is not defined
+        - patch_local_path is not defined
+        - patch_remote_path is not defined
+        - patch_extract_path is not defined
+
+    - name: Start WebLogic Patch Process
+      debug:
+        msg: |
+          === WebLogic Patch Application Started ===
+          Target Host: {{ inventory_hostname }}
+          Environment: PROD
+          Patch Number: {{ patch_number }}
+          Patch File: {{ patch_file }}
+          Oracle Home: {{ oracle_home }}
+          Timestamp: {{ ansible_date_time.iso8601 }}
 
   tasks:
-
     - name: Create Patch Directory on Target
       win_file:
         path: "E:\\Oracle\\Middleware\\patches"
@@ -50,4 +107,40 @@
     - name: Show OPatch Output
       debug:
         msg: "{{ opatch_output.stdout_lines }}"
+
+  post_tasks:
+    - name: Log WebLogic Patch Completion
+      debug:
+        msg: |
+          === WebLogic Patch Application Completed ===
+          Target Host: {{ inventory_hostname }}
+          Environment: PROD
+          Patch Number: {{ patch_number }}
+          Completion Time: {{ ansible_date_time.iso8601 }}
+          Status: SUCCESS
+          
+    - name: Generate Execution Summary Report
+      set_fact:
+        execution_summary:
+          host: "{{ inventory_hostname }}"
+          environment: "PROD"
+          patch_number: "{{ patch_number }}"
+          patch_file: "{{ patch_file }}"
+          oracle_home: "{{ oracle_home }}"
+          patch_extracted: "{{ patch_dir_listing.stdout_lines | length }}"
+          opatch_output: "{{ opatch_output.stdout_lines | length }}"
+          execution_time: "{{ ansible_date_time.iso8601 }}"
+          
+    - name: Display Final Execution Summary
+      debug:
+        msg: |
+          === FINAL EXECUTION SUMMARY ===
+          Host: {{ execution_summary.host }}
+          Environment: {{ execution_summary.environment }}
+          Patch Number: {{ execution_summary.patch_number }}
+          Patch File: {{ execution_summary.patch_file }}
+          Oracle Home: {{ execution_summary.oracle_home }}
+          Patch Files Extracted: {{ execution_summary.patch_extracted }}
+          OPatch Output Lines: {{ execution_summary.opatch_output }}
+          Execution Time: {{ execution_summary.execution_time }}
 
